fix(tracking): align attachment icon on tracking page

--- a/src/app/pages/tracking/tracking.component.scss
+++ b/src/app/pages/tracking/tracking.component.scss
@@ -22,8 +22,8 @@
   & .center-share {
     position: absolute;
     bottom: 200px;
-    left: 0px;
-    transform: translate(305px, 0);
+    left: 50%;
+    transform: translate(-113px, 0);
     cursor: pointer;
   }
 
